comments from Profs Group and Murphy

--- a/analysis_8TeV_19p4fb.tex
+++ b/analysis_8TeV_19p4fb.tex
@@ -49,20 +49,20 @@ have a 2.2\% uncertainty.
 \hline\hline
  Dataset & Run Range & Integrated Luminosity \\
 \hline
-/SingleMu/Run2012A-13Jul2012-v1/AOD & 190456--193621 & 0.81 fb$^{-1}$ \\
-/SingleMu/Run2012A-recover-06Aug2012-v1/AOD & 190782--190949 & 0.08 fb$^{-1}$ \\
-/SingleMu/Run2012B-13Jul2012-v1/AOD & 193834--196531 & 4.40 fb$^{-1}$ \\
-/SingleMu/Run2012C-24Aug2012-v1/AOD & 198022--198523 & 0.50 fb$^{-1}$ \\
-/SingleMu/Run2012C-PromptReco-v2/AOD & 198941--203746 & 6.39 fb$^{-1}$ \\
-/SingleMu/Run2012D-PromptReco-v1/AOD & 203768--208686 & 7.27 fb$^{-1}$ \\
+SingleMu, Run2012A & 190456--193621 & 0.81 fb$^{-1}$ \\
+SingleMu, Run2012A & 190782--190949 & 0.08 fb$^{-1}$ \\
+SingleMu, Run2012B & 193834--196531 & 4.40 fb$^{-1}$ \\
+SingleMu, Run2012C & 198022--198523 & 0.50 fb$^{-1}$ \\
+SingleMu, Run2012C & 198941--203746 & 6.39 fb$^{-1}$ \\
+SingleMu, Run2012D & 203768--208686 & 7.27 fb$^{-1}$ \\
 {\bf Total SingleMu} & {\bf 190645--208686} & {\bf 19.5 fb$\mathbf{^{-1}}$} \\
 \hline
-/SingleElectron/Run2012A-13Jul2012-v1/AOD & 190456--193621 & 0.81 fb$^{-1}$ \\
-/SingleElectron/Run2012A-recover-06Aug2012-v1/AOD & 190782--190949 & 0.08 fb$^{-1}$ \\
-/SingleElectron/Run2012B-13Jul2012-v1/AOD & 193834--196531 & 4.40 fb$^{-1}$ \\
-/SingleElectron/Run2012C-24Aug2012-v1/AOD & 198022--198523 & 0.50 fb$^{-1}$ \\
-/SingleElectron/Run2012C-PromptReco-v2/AOD & 198941--203746 & 6.40 fb$^{-1}$ \\
-/SingleElectron/Run2012D-PromptReco-v1/AOD & 203768--208686 & 7.27 fb$^{-1}$\\
+SingleElectron, Run2012A & 190456--193621 & 0.81 fb$^{-1}$ \\
+SingleElectron, Run2012A & 190782--190949 & 0.08 fb$^{-1}$ \\
+SingleElectron, Run2012B & 193834--196531 & 4.40 fb$^{-1}$ \\
+SingleElectron, Run2012C & 198022--198523 & 0.50 fb$^{-1}$ \\
+SingleElectron, Run2012C & 198941--203746 & 6.40 fb$^{-1}$ \\
+SingleElectron, Run2012D & 203768--208686 & 7.27 fb$^{-1}$\\
 {\bf Total SingleElectron} & {\bf 190645--208686} & {\bf 19.5 fb$\mathbf{^{-1}}$} \\
 \hline
 
@@ -85,42 +85,32 @@ generator.  The samples and associated cross sections used are listed in Table~\
 Mass & Higgs & Dataset & Cross Sect. \\
 & Decay & & \\
 \hline
-110 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-110\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1887 pb \\
+110 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=110$, Pythia6 & 0.1887 pb \\
 \hline
-115 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-115\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1663 pb \\
+115 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=115$, Pythia6 & 0.1663 pb \\
 \hline
-120 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-120\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1470 pb \\
+120 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=120$, Pythia6 & 0.1470 pb \\
 \hline
-122.5 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-122\_5\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1383 pb \\
+122.5 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=122.5$, Pythia6 & 0.1383 pb \\
 \hline
-125 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-125\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1302 pb \\
+125 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=125$, Pythia6 & 0.1302 pb \\
 \hline
-127.5 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-127\_5\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1227 pb \\
+127.5 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=127.5$, Pythia6 & 0.1227 pb \\
 \hline
-130 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-130\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1157 pb \\
+130 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=130$, Pythia6 & 0.1157 pb \\
 \hline
-135 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-135\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.1031 pb \\
+135 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=135$, Pythia6 & 0.1031 pb \\
 \hline
-140 GeV/c$^2$ & $H\rightarrow$ all & /TTH\_Inclusive\_M\-140\_8TeV\_pythia6/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.09207 pb \\
-\hline
-110 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-110\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0150 pb \\
-\hline
-115 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-115\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0150 pb \\
-\hline
-120 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-120\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0103 pb \\
-\hline
-122.5 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-122\_5\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0093 pb \\
-\hline
-125 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-125\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0082 pb \\
-\hline
-127.5 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-127\_5\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0072 pb \\
-\hline
-130 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-130\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0063 pb \\
-\hline
-135 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-135\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0046 pb \\
-\hline
-140 GeV/c$^2$ & $H\rightarrow\tau\tau$ & /TTH\_HToTauTau\_M-140\_8TeV\_pythia6/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 0.0032 pb \\
-
+140 GeV/c$^2$ & $H\rightarrow$ all & TTH, Inclusive Decays
+                                     $M_{H}=140$, Pythia6 & 0.09207 pb \\
 \hline\hline
 \end{tabular}
 \caption{List of signal MC datasets and cross sections used to determine the SM expectation.}
@@ -159,45 +149,48 @@ latter contribution is referred to as $\ttbar+b$.
 Sample & Dataset & Cross Sect. \\
 \hline
 $t\bar{t}+$~jets & & \\
-$t\bar{t}\rightarrow$~all & /TTJets\_MassiveBinDECAY\_TuneZ2star\_8TeV\-madgraph\-tauola/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 245.8 pb \\
- & /TTJets\_MassiveBinDECAY\_TuneZ2star\_8TeV\-madgraph\-tauola/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v2/AODSIM & \\
-$t\bar{t}\rightarrow$~jets & /TTJets\_HadronicMGDecays\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\_ext\-v1/AODSIM & 112.33 pb \\
-$t\bar{t}\rightarrow\ell\nu+4$~jets & /TTJets\_SemiLeptMGDecays\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\_ext\-v1/AODSIM & 107.66 pb \\
-$t\bar{t}\rightarrow\ell\nu\ell\nu+2$~jets & /TTJets\_FullLeptMGDecays\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v2/AODSIM & 25.81 pb \\
+$t\bar{t}\rightarrow$~all & TTJets, Inclusive Decays, Madgraph & 245.8 pb \\
+ $t\bar{t}\rightarrow$~jets & TTJets, Hadronic Decays, Madgraph & 112.33 pb \\
+$t\bar{t}\rightarrow\ell\nu+4$~jets & TTJets, Semileptonic Decays, Madgraph & 107.66 pb \\
+$t\bar{t}\rightarrow\ell\nu\ell\nu+2$~jets & TTJets, Fully Leptonic
+                                             Decays, Madgraph & 25.81 pb \\
 \hline
-$t\bar{t}+W$ & /TTWJets\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.249 pb \\
+$t\bar{t}+W$ & TTWJets, Madgraph & 0.249 pb \\
 \hline
-$t\bar{t}+Z$ & /TTZJets\_8TeV\-madgraph\_v2/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 0.208 pb \\
+$t\bar{t}+Z$ & TTZJets, Madgraph & 0.208 pb \\
 \hline
-$W+$~jets & /WJetsToLNu\_TuneZ2Star\_8TeV\-madgraph\-tarball/Summer12\-PU\_S7\_START52\_V9\-v1/AODSIM & 36257.2 pb \\
-$W+1$~jet & /W1JetsToLNu\_TuneZ2Star\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM  & 6440.4 pb \\
-$W+2$~jets & /W2JetsToLNu\_TuneZ2Star\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 2087.2 pb \\
-$W+3$~jets & /W3JetsToLNu\_TuneZ2Star\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 619.0 pb \\
-$W+4$~jets & /W4JetsToLNu\_TuneZ2Star\_8TeV\-madgraph/Summer12\_DR53X\-PU\_S10\_START53\_V7A\-v1/AODSIM & 255.2 pb \\
+$W+$~jets & WJets to Leptons, Madgraph & 36257.2 pb \\
+$W+1$~jet & W+1Jet to Leptons, Madgraph & 6440.4 pb \\
+$W+2$~jets & W+2Jets to Leptons, Madgraph & 2087.2 pb \\
+$W+3$~jets & W+3Jets to Leptons, Madgraph & 619.0 pb \\
+$W+4$~jets & W+4Jets to Leptons, Madgraph & 255.2 pb \\
 \hline
 $Z/\gamma^* +$~jets & & \\
-10~GeV/c$^2 < M_{\ell\ell} < $50 GeV/c$^2$ & /DYJetsToLL\_M-10To50\_TuneZ2Star\_8TeV-madgraph/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 14702 pb \\
-$M_{\ell\ell}~>~$50~GeV/c$^2$ & /DYJetsToLL\_M-50\_TuneZ2Star\_8TeV-madgraph-tarball/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 3505.7 pb \\
-$Z/\gamma^* +1$~jet & /DY1JetsToLL\_M-50\_TuneZ2Star\_8TeV-madgraph/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 666.7 pb \\
-$Z/\gamma^* +2$~jets & /DY2JetsToLL\_M-50\_TuneZ2Star\_8TeV-madgraph/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 215.1 pb \\
-$Z/\gamma^* +3$~jets & /DY3JetsToLL\_M-50\_TuneZ2Star\_8TeV-madgraph/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 66.07 pb \\
-$Z/\gamma^* +4$~jets & /DY4JetsToLL\_M-50\_TuneZ2Star\_8TeV-madgraph/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 27.38 pb \\
+10~GeV/c$^2 < M_{\ell\ell} < $50 GeV/c$^2$ & DYJets to Leptons,
+                                             $10<M_{\ell\ell}<50$ GeV,
+                                             Madgraph & 14702 pb \\
+$M_{\ell\ell}~>~$50~GeV/c$^2$ & DYJets to Leptons, $M_{\ell\ell}>50$
+                                GeV, Madgraph & 3505.7 pb \\
+$Z/\gamma^* +1$~jet & DY+1Jet to Leptons, $M_{\ell\ell}>50$ GeV, Madgraph & 666.7 pb \\
+$Z/\gamma^* +2$~jets & DY+2Jets to Leptons, $M_{\ell\ell}>50$ GeV, Madgraph & 215.1 pb \\
+$Z/\gamma^* +3$~jets & DY+3Jets to Leptons, $M_{\ell\ell}>50$ GeV, Madgraph & 66.07 pb \\
+$Z/\gamma^* +4$~jets & DY+4Jets to Leptons, $M_{\ell\ell}>50$ GeV, Madgraph & 27.38 pb \\
 \hline
 Single $t$ & & \\
-$s$-channel & /T\_s-channel\_TuneZ2star\_8TeV-powheg-tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 3.79 pb\\
-$t$-channel & /T\_t-channel\_TuneZ2star\_8TeV-powheg-tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 56.4 pb \\
-$tW$ & /T\_tW-channel-DR\_TuneZ2star\_8TeV-powheg-tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 11.1 pb \\
+$s$-channel & T, s-channel, Powheg & 3.79 pb\\
+$t$-channel & T, t-channel, Powheg & 56.4 pb \\
+$tW$ & T, tW-channel, Powheg & 11.1 pb \\
 \hline
 Single $\bar{t}$ & & \\
-$s$-channel & /Tbar\_s-channel\_TuneZ2star\_8TeV-powheg-tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 1.76 pb\\
-$t$-channel & /Tbar\_t-channel\_TuneZ2star\_8TeV-powheg-tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 30.7 pb \\
-$tW$ & /Tbar\_tW-channel-DR\_TuneZ2star\_8TeV-powheg-tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 11.1 pb \\
+$s$-channel & $\bar{T}$, s-channel, Powheg & 1.76 pb\\
+$t$-channel & $\bar{T}$, t-channel, Powheg & 30.7 pb \\
+$tW$ & $\bar{T}$, tW-channel, Powheg & 11.1 pb \\
 \hline
-$WW$ & /WW\_TuneZ2star\_8TeV\_pythia6\_tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 54.8 pb \\
+$WW$ & WW, Pythia6 & 54.8 pb \\
 \hline
-$WZ$ & /WZ\_TuneZ2star\_8TeV\_pythia6\_tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 32.3 pb \\
+$WZ$ & WZ, Pythia6 & 32.3 pb \\
 \hline
-$ZZ$ & /ZZ\_TuneZ2star\_8TeV\_pythia6\_tauola/Summer12\_DR53X-PU\_S10\_START53\_V7A-v1/AODSIM & 7.7 pb \\
+$ZZ$ & ZZ, Pythia6 & 7.7 pb \\
 \hline\hline
 \end{tabular}
 \caption{List of background MC datasets and cross sections used for normalization.}
@@ -1613,5 +1606,20 @@ channels and published in the Journal of High Energy Physics (JHEP) in
 September of 2014 \cite{Khachatryan:2014qaa}.  The combined analytical power
 of all of the channels allowed for an upper limit of 4.5 times
 the predicted Standard Model cross section.  This is slightly more than
-2$\sigma$ away from the expected factor of 2.7 from simulations
+2$\sigma$ away from the expected factor of 1.8 from simulations
 alone.  
+
+\par Relative the previous analysis, which was primarilly driven by my
+efforts, the addition of new members to our research group and the
+conclusion of the 7 TeV analysis allowed me to focus on specific tasks
+in greater detail.  The validation of the b-tagging calibration
+factors involved extensive investigations, selecting both light and
+heavy-flavour enriched events, using a $\chi^{2}$ minimization
+technique to identify \ttjets events and $Z+$jets events, in order to
+compare the simulations to data.  I also was responsible for
+comparisons of this analysis to the results provided by ATLAS.  This
+involved reproducing the ATLAS event selection and signal extraction
+techniques, then producing an exact account of the effect that each of
+the different choices made on the upper limits of this analysis.  The
+results of the comparisons will be used to guide the design of the
+analysis in Run 2.   
