comments from Profs Group and Murphy

--- a/analysis_improvements.tex
+++ b/analysis_improvements.tex
@@ -124,10 +124,11 @@ described in previous chapters via the "best Higgs mass'' variable.
 This is a $\chi^{2}$ minimization that relies only on the masses of
 the top quark, $W$ and Higgs bosons in the event, to decide which jets
 are associated to the decays of which particles.  These mass variable
-will be useful in identifying jets from the \ttbar system.  Figure X shows the
-case for the $W$ boson mass evaluated for jets which have been
-correctly associated to the MC truth generated partons in blue, and
-for the incorrect associations in green.  
+will be useful in identifying jets from the \ttbar system.  Figure
+\ref{fig:aMCatNLO_wMass} shows the case for the $W$ boson mass
+evaluated for jets which have been correctly associated to the MC
+truth generated partons in blue, and for the incorrect associations in
+green.   
 
 \begin{figure}[hbtp] 
   {\centering
