comments from Profs Group and Murphy

--- a/conclusions_and_summary.tex
+++ b/conclusions_and_summary.tex
@@ -54,10 +54,10 @@ backgrounds.  No significant excess of events in the data was
 observed, and an observed (expected) upper limit on the production
 rate of \ttH at 9.5 (5.4) times the rate predicted by the Standard
 Model.  This final state was combined with a di-lepton final state,
-and the previous results from the 7 \TeV dataset collected in 2011, to
-produced an observed (expected) upper limit on the \ttH process as 5.8
+and the previous results from the 7 \TeV dataset collected in 2011,
+produce an observed (expected) upper limit on the \ttH process as 5.8
 (5.2) times the Standard Model rate and published in the Journal of
-High Energy Physics (JHEP) in May of 2013.  
+High Energy Physics (JHEP) in May of 2013.   
 
 \par A second analysis was performed on the full 19.5 \fbinv dataset of
 8 \TeV data collected by CMS.  This also used a final state with a
